Fixed a bug that caused native selects to not be displayed properly on IE and FF

--- a/src/widgets/select/select.scss
+++ b/src/widgets/select/select.scss
@@ -35,7 +35,6 @@
     appearance: none;
     cursor: pointer;
     margin: 0 !important;
-    font-size: 0;
     opacity: 0;
     border: 0;
     border-radius: inherit;
